--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
   // All supported effects and their suggested default trigger/params
   const EFFECTS = [
-    { kind: 'none', label: 'None (no effect)', defaultTrigger: null, params: [] },
     { kind: 'move_forward', label: 'Move Forward', defaultTrigger: 'on_next_roll', params: [{ name: 'amount', type: 'number', min: 1, step: 1, placeholder: 'e.g. 2' }] },
     { kind: 'move_back', label: 'Move Back', defaultTrigger: 'on_next_roll', params: [{ name: 'amount', type: 'number', min: 1, step: 1, placeholder: 'e.g. 1' }] },
     { kind: 'teleport_to', label: 'Teleport To (index)', defaultTrigger: 'on_next_roll', params: [{ name: 'index', type: 'number', min: 1, step: 1, placeholder: 'tile index' }] },
@@ -112,18 +111,17 @@
         iconFile: String(t.iconFile ?? t.iconUrl ?? t.iconURL ?? t.icon ?? t.icon_link ?? t.iconLink ?? ''),
         effect: (()=>{
           const eff = t.effect || {};
-          if (eff == null || eff.kind === 'none') return { kind: 'none' };
           const kind = String(eff.kind || 'move_forward');
           const meta = EFFECTS.find(e=>e.kind===kind) || EFFECTS[0];
           const trigger = eff.trigger || meta.defaultTrigger || 'on_next_roll';
           const obj = { kind, trigger };
+          // pass through params if present
           if('amount' in eff) obj.amount = coerceNumber(eff.amount, 1);
           if('index' in eff) obj.index = coerceNumber(eff.index, 1);
           return obj;
         })(),
         meta: (()=>{
           const eff = t.effect || {};
-          if (eff == null || eff.kind === 'none') return { presetId: 'none', opts: {}, attached: false };
           const kind = String(eff.kind || 'move_forward');
           const opts = {};
           if('amount' in eff) opts.amount = coerceNumber(eff.amount, 1);
@@ -134,8 +132,9 @@
       tiles.push(clean);
     }
 
+    // sort by tileNumber and re-sequence
     tiles.sort((a,b)=>a.tileNumber-b.tileNumber);
-    tiles.forEach((t,i)=>{ t.tileNumber = i+1; t.id = String(i+1); });
+    tiles.forEach((t,i)=>{ t.tileNumber = i+1; });
     return tiles;
   }
 
@@ -159,7 +158,7 @@
           const [moved] = newArr.splice(evt.oldIndex, 1);
           newArr.splice(evt.newIndex, 0, moved);
           // resequence tileNumber
-          newArr.forEach((t,i)=>{ t.tileNumber = i+1; t.id = String(i+1); });
+          newArr.forEach((t,i)=>{ t.tileNumber = i+1; });
           setItems(newArr);
         }
       });
@@ -192,12 +191,6 @@
 
     const update = (patch)=>{
       const nextEff = { ...eff, ...patch };
-      if (nextEff.kind === 'none') {
-        return onChange({
-          effect: { kind: 'none' },
-          meta: { presetId: 'none', opts: {}, attached: false }
-        });
-      }
       const opts = {};
       if('amount' in nextEff) opts.amount = Number(nextEff.amount);
       if('index' in nextEff) opts.index = Number(nextEff.index);
@@ -218,37 +211,8 @@
               onChange: e=>{
                 const nextKind = e.target.value;
                 const meta = EFFECTS.find(x=>x.kind===nextKind) || EFFECTS[0];
-                update({ kind: nextKind, trigger: nextKind === 'none' ? undefined : (meta.defaultTrigger || 'on_next_roll'), amount: undefined, index: undefined });
+                update({ kind: nextKind, trigger: meta.defaultTrigger, amount: undefined, index: undefined });
               }
-            }, EFFECTS.map(x=>React.createElement('option', { key:x.kind, value:x.kind }, x.label)))
-          ),
-          eff.kind !== 'none' && React.createElement('div', null,
-            React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Trigger'),
-            React.createElement('select', {
-              className: 'w-full rounded-lg border-slate-300',
-              value: eff.trigger || def.defaultTrigger || 'on_next_roll',
-              onChange: e=> update({ trigger: e.target.value })
-            }, [
-              React.createElement('option', { key:'on_next_roll', value:'on_next_roll' }, 'on_next_roll'),
-              React.createElement('option', { key:'on_land', value:'on_land' }, 'on_land')
-            ])
-          )
-        ),
-        eff.kind === 'none'
-          ? React.createElement('div', { className: 'text-xs text-slate-500' }, 'No effect will be applied for this tile.')
-          : (def.params || []).map(p=> React.createElement('div', { key:p.name },
-              React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, p.name),
-              React.createElement('input', {
-                className: 'w-full rounded-lg border-slate-300',
-                type: 'number', min: p.min, step: p.step || 1, placeholder: p.placeholder || '',
-                value: eff[p.name] ?? '',
-                onChange: (e)=> update({ [p.name]: e.target.value === '' ? undefined : Number(e.target.value) })
-              })
-            )
-          )
-      )
-    );
-  }
             }, EFFECTS.map(x=>React.createElement('option', { key:x.kind, value:x.kind }, x.label)))
           ),
           React.createElement('div', null,
@@ -287,7 +251,7 @@
         React.createElement('div', { className: 'grid grid-cols-2 gap-3' },
           React.createElement('div', null,
             React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'ID'),
-            React.createElement('input', { className: 'w-full rounded-lg border-slate-300 bg-slate-100 text-slate-500', value: tile.id, disabled: true, readOnly: true })
+            React.createElement('input', { className: 'w-full rounded-lg border-slate-300', value: tile.id, onChange: e=> update({ id: e.target.value }) })
           ),
           React.createElement('div', null,
             React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Tile Number'),
@@ -348,7 +312,7 @@
     );
   }
 
-  function PreviewGrid({ tiles, onSelect, selectedId, setTiles }){
+  function PreviewGrid({ tiles, onSelect, selectedId }){
     const listRef = useRef(null);
     useSortable(listRef, tiles, (next)=>{
       // after sorting, keep selection on same tile id if possible
@@ -378,7 +342,7 @@
     const selectedTile = useMemo(()=> tiles.find(t=>t.id===selectedId) || null, [tiles, selectedId]);
 
     const replaceTile = (next)=>{
-      setTiles(prev => prev.map(t=> t.id===next.id ? next : t).sort((a,b)=>a.tileNumber-b.tileNumber).map((t,i)=> ({...t, tileNumber: i+1, id: String(i+1)})));
+      setTiles(prev => prev.map(t=> t.id===next.id ? next : t).sort((a,b)=>a.tileNumber-b.tileNumber).map((t,i)=> ({...t, tileNumber: i+1})));
     };
 
     const addTile = ()=>{
@@ -414,21 +378,19 @@
 
     const exportJSON = ()=>{
       const out = tiles.map(t=>{
-        const eff = t.effect || null;
-        const isNone = !eff || eff.kind === 'none';
+        const eff = t.effect || {};
         const metaOpts = {};
-        if(eff && 'amount' in eff) metaOpts.amount = eff.amount;
-        if(eff && 'index' in eff) metaOpts.index = eff.index;
-        const obj = {
+        if('amount' in eff) metaOpts.amount = eff.amount;
+        if('index' in eff) metaOpts.index = eff.index;
+        return {
           id: String(t.id),
           tileNumber: Number(t.tileNumber),
           name: t.name || '',
           desc: t.desc || '',
-          iconFile: t.iconFile || ''
+          iconFile: t.iconFile || '',
+          effect: { ...eff },
+          meta: { presetId: eff.kind || 'move_forward', opts: metaOpts, attached: true }
         };
-        obj.effect = isNone ? null : { ...eff };
-        if (!isNone) obj.meta = { presetId: eff.kind || 'move_forward', opts: metaOpts, attached: true };
-        return obj;
       });
       const text = JSON.stringify(out, null, 2);
       download('board.json', text);
@@ -437,12 +399,12 @@
     const duplicateSelected = ()=>{
       if(!selectedTile) return;
       const copy = JSON.parse(JSON.stringify(selectedTile));
-      delete copy.id;
+      copy.id = nanoid();
       setTiles(prev=>{
         const idx = prev.findIndex(t=>t.id===selectedTile.id);
         const next = prev.slice();
         next.splice(idx+1, 0, copy);
-        next.forEach((t,i)=> { t.tileNumber = i+1; t.id = String(i+1); });
+        next.forEach((t,i)=> t.tileNumber = i+1);
         return next;
       });
     };
@@ -452,7 +414,7 @@
       if(!confirm('Delete this tile?')) return;
       setTiles(prev=>{
         const next = prev.filter(t=> t.id !== selectedTile.id);
-        next.forEach((t,i)=> { t.tileNumber = i+1; t.id = String(i+1); });
+        next.forEach((t,i)=> t.tileNumber = i+1);
         return next;
       });
       setSelectedId(null);
@@ -474,7 +436,7 @@
 
         React.createElement('div', { className: 'grid grid-cols-1 lg:grid-cols-3 gap-6 items-start' },
           React.createElement('div', { className: 'lg:col-span-2 space-y-3' },
-            React.createElement(PreviewGrid, { tiles, onSelect: setSelectedId, selectedId, setTiles }),
+            React.createElement(PreviewGrid, { tiles, onSelect: setSelectedId, selectedId }),
             React.createElement('div', { className: 'text-xs text-slate-500' }, 'Tip: drag by the ≡ handle to reorder. Export to download the JSON.')
           ),
           React.createElement('aside', { className: 'rounded-2xl bg-white shadow-soft border border-slate-200 p-4' },
