--- a/index.html
+++ b/index.html
@@ -20,11 +20,112 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    html, body { font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
+    /* Fonts */
+    @font-face {
+      font-family: 'RuneScape-Quill';
+      src: url('/assets/font/RuneScape-Quill.otf') format('opentype');
+      font-weight: normal;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    html, body {
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      background: url('/assets/images/bg.png') center / cover fixed no-repeat;
+      min-height: 100vh;
+    }
+
+    :root {
+      --tile: 84px;
+      --bronze: #cd7f32;
+      --bronze-dark: #8a531e;
+      --ink: #2c1a0e;
+    }
+
     .drag-handle { cursor: grab; }
     .drag-handle:active { cursor: grabbing; }
     .scrollbar-thin::-webkit-scrollbar { height: 8px; width: 8px; }
     .scrollbar-thin::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.2); border-radius: 9999px; }
+
+    /* Tile look: parchment fill + bronze frame to mimic renderer */
+    .tt-tile {
+      position: relative;
+      width: var(--tile);
+      height: var(--tile);
+      background: url('/assets/images/parchment.png') center / cover no-repeat;
+      border: 3px solid var(--bronze);
+      border-radius: 6px;
+      box-shadow:
+        0 2px 2px rgba(0,0,0,0.45),
+        inset 0 0 0 1.5px var(--bronze-dark),
+        inset 0 6px 10px rgba(255,255,255,0.22);
+      transition: transform .06s ease;
+    }
+    .tt-tile:hover { transform: translateY(-1px); }
+
+    .tt-tile-num {
+      position: absolute;
+      top: 4px; right: 4px;
+      font-family: 'RuneScape-Quill', Inter, ui-sans-serif;
+      font-size: 14px;
+      color: var(--ink);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.85);
+      letter-spacing: .3px;
+      user-select: none;
+    }
+
+    .tt-tile-icon {
+      position: absolute;
+      left: 50%; top: 50%; transform: translate(-50%, -50%);
+      width: calc(var(--tile) * .72);
+      height: calc(var(--tile) * .72);
+      object-fit: contain;
+      background: rgba(0,0,0,0.08);
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.35);
+    }
+
+    .tt-tile-name {
+      position: absolute;
+      left: 50%; top: 50%; transform: translate(-50%, -50%);
+      max-width: calc(var(--tile) * .86);
+      text-align: center;
+      font-family: 'RuneScape-Quill', Inter, ui-sans-serif;
+      color: var(--ink);
+      text-shadow: 0 1px 0 rgba(0,0,0,.85);
+      font-size: 13px;
+      line-height: 1.05;
+      user-select: none;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .tt-tile-badge {
+      position: absolute;
+      left: 6px; bottom: 6px;
+      width: 22px; height: 22px;
+      border-radius: 6px;
+      background: rgba(0,0,0,0.55);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.35);
+      display: grid; place-items: center;
+      font-family: 'RuneScape-Quill', Inter, ui-sans-serif;
+      color: #ffd166;
+      font-size: 11px;
+      text-shadow: 0 1px 0 rgba(0,0,0,.85);
+      user-select: none;
+    }
+
+    .tt-card { /* outer wrapper for drag affordance */
+      display: flex; align-items: center; gap: 10px;
+      padding: 8px; background: rgba(255,255,255,0.55);
+      border: 1px solid rgba(0,0,0,0.08);
+      border-radius: 14px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.08);
+      backdrop-filter: blur(2px);
+    }
+
+    .tt-id { font-size: 11px; color: rgba(0,0,0,0.55); margin-left: auto; }
   </style>
 </head>
 <body class="bg-slate-50">
@@ -169,19 +270,23 @@
 
   function TileCard({ tile, onSelect, selected }){
     const eff = EFFECTS.find(e=>e.kind===tile.effect?.kind);
+    const hasIcon = Boolean(tile.iconFile);
     return (
-      React.createElement('div', {
-        className: `group rounded-2xl bg-white shadow-soft border border-slate-200 p-3 flex gap-3 items-center ${selected? 'ring-2 ring-indigo-400': ''}`,
-        onClick: onSelect
-      },
-        React.createElement('div', { className: 'drag-handle shrink-0 w-5 text-slate-400 hover:text-slate-600' }, '≡'),
-        React.createElement('img', { src: tile.iconFile || DEFAULT_ICON, className: 'w-12 h-12 rounded-lg object-contain bg-slate-100', onError:(e)=>{e.currentTarget.src=DEFAULT_ICON;} }),
-        React.createElement('div', { className: 'min-w-0' },
-          React.createElement('div', { className: 'text-sm text-slate-500' }, `#${tile.tileNumber}`),
-          React.createElement('div', { className: 'font-medium text-slate-900 truncate' }, tile.name || 'Untitled Tile'),
-          React.createElement('div', { className: 'text-xs text-slate-500 truncate' }, eff? eff.label : (tile.effect?.kind || 'No effect')),
+      React.createElement('div', { className: `tt-card ${selected? 'ring-2 ring-indigo-400': ''}` },
+        React.createElement('div', { className: 'drag-handle shrink-0 w-5 text-slate-400 hover:text-slate-600 select-none' }, '≡'),
+        React.createElement('div', { className: 'tt-tile shrink-0', onClick: onSelect },
+          React.createElement('div', { className: 'tt-tile-num' }, `#${tile.tileNumber}`),
+          hasIcon
+            ? React.createElement('img', { src: tile.iconFile, className: 'tt-tile-icon', onError:(e)=>{ e.currentTarget.style.display='none'; } })
+            : React.createElement('div', { className: 'tt-tile-name' }, (tile.name || 'Untitled')),
+          (tile.effect && tile.effect.kind && tile.effect.kind !== 'none') &&
+            React.createElement('div', { className: 'tt-tile-badge', title: tile.effect.kind }, (tile.effect.kind||'').split('_').map(s=>s[0]).join('').toUpperCase())
         ),
-        React.createElement('div', { className: 'ml-auto text-xs text-slate-400' }, tile.id)
+        React.createElement('div', { className: 'min-w-0' },
+          React.createElement('div', { className: 'text-sm text-slate-600' }, eff? eff.label : (tile.effect?.kind === 'none' ? 'No effect' : (tile.effect?.kind || 'No effect'))),
+          React.createElement('div', { className: 'text-xs text-slate-500 truncate max-w-[22rem]' }, tile.name || 'Untitled Tile')
+        ),
+        React.createElement('div', { className: 'tt-id' }, tile.id)
       )
     );
   }
