--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     /* Fonts */
     @font-face {
       font-family: 'RuneScape-Quill';
-      src: url('/assets/font/RuneScape-Quill.otf') format('opentype');
+      src: url('assets/font/RuneScape-Quill.otf') format('opentype');
       font-weight: normal;
       font-style: normal;
       font-display: swap;
@@ -31,7 +31,7 @@
 
     html, body {
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      background: url('/assets/images/bg.png') center / cover fixed no-repeat;
+      background: url('assets/images/bg.png') center / cover fixed no-repeat;
       min-height: 100vh;
     }
 
@@ -52,7 +52,7 @@
       position: relative;
       width: var(--tile);
       height: var(--tile);
-      background: url('/assets/images/parchment.png') center / cover no-repeat;
+      background: url('assets/images/parchment.png') center / cover no-repeat;
       border: 3px solid var(--bronze);
       border-radius: 6px;
       box-shadow:
@@ -157,6 +157,16 @@
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 
   <script>
+
+    const rootEl = document.getElementById('root');
+try {
+  const root = ReactDOM.createRoot(rootEl);
+  root.render(React.createElement(App));
+} catch (e) {
+  rootEl.innerHTML = '<div style="padding:16px;color:#b91c1c;background:#fee2e2;border:1px solid #fecaca;border-radius:12px;font-family:ui-sans-serif">UI failed to load: '
+    + String((e && e.message) || e) + '</div>';
+  console.error(e);
+}
   const { useState, useMemo, useEffect, useRef } = React;
 
   // All supported effects and their suggested default trigger/params
@@ -374,33 +384,6 @@
       )
     );
   }
-            }, EFFECTS.map(x=>React.createElement('option', { key:x.kind, value:x.kind }, x.label)))
-          ),
-          React.createElement('div', null,
-            React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, 'Trigger'),
-            React.createElement('select', {
-              className: 'w-full rounded-lg border-slate-300',
-              value: eff.trigger || def.defaultTrigger,
-              onChange: e=> update({ trigger: e.target.value })
-            }, [
-              React.createElement('option', { key:'on_next_roll', value:'on_next_roll' }, 'on_next_roll'),
-              React.createElement('option', { key:'on_land', value:'on_land' }, 'on_land')
-            ])
-          )
-        ),
-        // Param editors
-        (def.params || []).map(p=> React.createElement('div', { key:p.name },
-          React.createElement('label', { className: 'block text-xs font-medium text-slate-600 mb-1' }, p.name),
-          React.createElement('input', {
-            className: 'w-full rounded-lg border-slate-300',
-            type: 'number', min: p.min, step: p.step || 1, placeholder: p.placeholder || '',
-            value: eff[p.name] ?? '',
-            onChange: (e)=> update({ [p.name]: e.target.value === '' ? undefined : Number(e.target.value) })
-          })
-        ))
-      )
-    );
-  }
 
   function EditorPanel({ tile, setTile, onDuplicate, onDelete }){
     if(!tile) return React.createElement('div', { className: 'text-slate-500' }, 'Select a tile to edit.');
@@ -460,18 +443,6 @@
       reader.readAsText(f);
       e.target.value = '';
     }
-
-    return (
-      React.createElement('div', { className: 'flex flex-wrap items-center gap-2' },
-        React.createElement('button', { className: 'px-3 py-2 rounded-lg bg-emerald-600 text-white hover:bg-emerald-700', onClick: onNew }, 'Add Tile'),
-        React.createElement('button', { className: 'px-3 py-2 rounded-lg bg-slate-200 text-slate-800 hover:bg-slate-300', onClick: onClear }, 'Clear'),
-        React.createElement('button', { className: 'px-3 py-2 rounded-lg bg-sky-600 text-white hover:bg-sky-700', onClick: triggerImport }, 'Import JSON'),
-        React.createElement('input', { ref: fileRef, type: 'file', accept: '.json,application/json', className: 'hidden', onChange: onFile }),
-        React.createElement('button', { className: 'px-3 py-2 rounded-lg bg-indigo-600 text-white hover:bg-indigo-700', onClick: onExport }, 'Export JSON'),
-        React.createElement('div', { className: 'ml-auto text-sm text-slate-600' }, `${count} tile${count===1?'':'s'}`)
-      )
-    );
-  }
 
     return (
       React.createElement('div', { className: 'flex flex-wrap items-center gap-2' },
