--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
     
 /* Each grid cell = exactly one tile */
 .tt-cell {
-  width: var(--tile);
-  height: var(--tile);
-  position: relative;
+  transition: transform .16s cubic-bezier(.2,.7,.2,1), box-shadow .16s cubic-bezier(.2,.7,.2,1);
 }
 
 /* Keep the visual wrapper the same size as the tile while we fix offset */
@@ -133,7 +131,7 @@
 }
     .tt-id { font-size: 11px; color: rgba(0,0,0,0.55); margin-left: auto; }
       /* Grid container for board preview */
-    .tt-grid { display: grid; grid-auto-rows: var(--tile); gap: 12px; }
+    .tt-grid { gap: 12px; }
 
     /* Start/Finish marker badges */
     .tt-marker {
@@ -166,7 +164,18 @@ body, .tt-grid, .tt-cell, .tt-tile, .tt-tile * {
 /* Prevent image-native drag ghost */
 .tt-tile img {
   -webkit-user-drag: none;
-  user-drag: none;
+}
+.tt-chosen .tt-tile {
+  transform: scale(1.04);
+  box-shadow: 0 10px 18px rgba(0,0,0,.25), inset 0 0 0 1.5px rgba(0,0,0,.25);
+}
+
+.tt-ghost .tt-tile {               /* placeholder in original slot */
+  visibility: hidden;              /* hide original tile while a mirror follows pointer */
+}
+.tt-drag {                          /* the mirror element that follows cursor */
+  opacity: .95;
+  cursor: grabbing !important;
 }
   </style>
 </head>
@@ -343,11 +352,12 @@ function TileCard({ tile, onSelect, selected, marker }) {
         React.createElement('div', { className: 'tt-tile-num' }, `#${tile.tileNumber}`),
         hasIcon
           ? React.createElement('img', {
-              src: tile.iconFile,
-              className: 'tt-tile-icon',
-              draggable: false,
-              onError:(e)=>{ e.currentTarget.style.display='none'; }
-            })
+  src: tile.iconFile,
+  className: 'tt-tile-icon',
+  draggable: false,
+  onError:(e)=>{ e.currentTarget.style.display='none'; }
+})
+
           : React.createElement('div', { className: 'tt-tile-name' }, (tile.name || 'Untitled')),
         (tile.effect && tile.effect.kind && tile.effect.kind !== 'none') &&
           React.createElement('div', { className: 'tt-tile-badge', title: tile.effect.kind },
