--- a/index.html
+++ b/index.html
@@ -118,8 +118,37 @@
     
 /* Each grid cell = exactly one tile */
 .tt-cell {
+  width: var(--tile);
+  height: var(--tile);
+  position: relative;
   transition: transform .16s cubic-bezier(.2,.7,.2,1), box-shadow .16s cubic-bezier(.2,.7,.2,1);
 }
+/* Board + Editor two-column layout */
+.tt-layout {
+  display: grid;
+  grid-template-columns: 1fr 360px;   /* board | editor */
+  gap: 16px;
+}
+
+/* Stack on narrow screens */
+@media (max-width: 1024px) {
+  .tt-layout {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Scrollable/wrapping board area */
+.tt-board-wrap {
+  position: relative;
+  overflow: auto;             /* scroll if too wide/tall */
+  padding: 8px;
+  background: rgba(255,255,255,0.35);
+  border: 1px solid rgba(0,0,0,0.06);
+  border-radius: 14px;
+  box-shadow: 0 8px 30px rgba(0,0,0,0.08);
+  backdrop-filter: blur(2px);
+}
+
 
 /* Keep the visual wrapper the same size as the tile while we fix offset */
 .tt-card {
@@ -131,7 +160,14 @@
 }
     .tt-id { font-size: 11px; color: rgba(0,0,0,0.55); margin-left: auto; }
       /* Grid container for board preview */
-    .tt-grid { gap: 12px; }
+.tt-grid {
+  display: grid;
+  grid-auto-rows: var(--tile);
+  grid-auto-flow: row dense;  /* cascade into next row, fill holes while dragging */
+  align-content: start;
+  justify-content: start;
+  gap: 12px;
+}
 
     /* Start/Finish marker badges */
     .tt-marker {
@@ -151,7 +187,8 @@
     }
 
     /* Prevent selection/drag ghost blue marquee while dragging */
-body, .tt-grid, .tt-cell, .tt-tile, .tt-tile * {
+.tt-board-wrap, .tt-grid, .tt-cell, .tt-tile, .tt-tile * {
+  -webkit-user-select: none;
   user-select: none;
 }
 
@@ -504,21 +541,17 @@ function TileCard({ tile, onSelect, selected, marker }) {
     );
   }
 
- function PreviewGrid({ tiles, onSelect, selectedId, setTiles, cols, snake }) {
+function PreviewGrid({ tiles, onSelect, selectedId, setTiles, cols, snake }) {
   const listRef = React.useRef(null);
-
-  // SortableJS wire-up (drag whole grid cell)
   useSortable(listRef, tiles, (newArr) => {
-    // Resequence path order -> tileNumber & id (1..N)
     for (let i = 0; i < newArr.length; i++) {
       newArr[i] = { ...newArr[i], tileNumber: i + 1, id: String(i + 1) };
     }
     setTiles(newArr.slice());
   });
 
-  const colsSafe = Math.max(1, Math.min(15, Number(cols) || 1)); // clamp to 1..15
+  const colsSafe = Math.max(1, Math.min(15, Number(cols) || 1)); // clamp 1..15
 
-  // Compute grid placement from path index
   const cellStyleFor = (pathIndex) => {
     const row = Math.floor(pathIndex / colsSafe);
     const colBase = pathIndex % colsSafe;
@@ -686,21 +719,26 @@ function TileCard({ tile, onSelect, selected, marker }) {
           React.createElement(BoardSettings, { cols, setCols, snake, setSnake, count: tiles.length })
         ),
 
-        React.createElement('div', { className: 'grid grid-cols-1 lg:grid-cols-3 gap-6 items-start' },
-          React.createElement('div', { className: 'lg:col-span-2 space-y-3' },
-            React.createElement(PreviewGrid, { tiles, onSelect: setSelectedId, selectedId, setTiles, cols, snake }),
-            React.createElement('div', { className: 'text-xs text-slate-500' }, 'Tip: drag by the ≡ handle to reorder. Export to download the JSON.')
-          ),
-          React.createElement('aside', { className: 'rounded-2xl bg-white shadow-soft border border-slate-200 p-4' },
-            React.createElement('h2', { className: 'text-sm font-semibold text-slate-700 mb-3' }, 'Tile Editor'),
-            React.createElement(EditorPanel, {
-              tile: selectedTile,
-              setTile: replaceTile,
-              onDuplicate: duplicateSelected,
-              onDelete: deleteSelected
-            })
-          )
-        ),
+React.createElement('div', { className: 'tt-layout' },
+  // Left: Board area
+  React.createElement('div', { className: 'space-y-3' },
+    React.createElement('div', { className: 'tt-board-wrap' },
+      React.createElement(PreviewGrid, { tiles, onSelect: setSelectedId, selectedId, setTiles, cols, snake })
+    ),
+    React.createElement('div', { className: 'text-xs text-slate-500' }, 'Tip: drag a tile to reorder. Export to download the JSON.')
+  ),
+
+  // Right: Editor
+  React.createElement('aside', { className: 'rounded-2xl bg-white shadow-soft border border-slate-200 p-4' },
+    React.createElement('h2', { className: 'text-sm font-semibold text-slate-700 mb-3' }, 'Tile Editor'),
+    React.createElement(EditorPanel, {
+      tile: selectedTile,
+      setTile: replaceTile,
+      onDuplicate: duplicateSelected,
+      onDelete: deleteSelected
+    })
+  )
+),
 
         React.createElement('footer', { className: 'text-center text-xs text-slate-500 pt-2' }, 'Made for GitHub Pages — no backend required.')
       )
